# cmake-template-app

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
cmake/: policy.cmake
src/: main.cpp
